--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/CougarProgramming623/COB-2022#readme",
   "devDependencies": {
-    "electron": "^16.0.7",
+    "electron": "^22.0.3",
     "wpilib-nt-client": "^1.7.2"
+  },
+  "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
