--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
-    "ipcjs": "^0.9.0"
+    "ipcjs": "^0.9.0",
+    "ntcore-ts-client": "^0.2.1"
   }
 }
